# health_proj

./: .gitignore  README.md  package-lock.json  package.json
backend/: client_secret.json  pyproject.toml
backend/src/: db.py  email.py  main.py
backend/src/db/: db.py  old_db.py  set_db.py
backend/tests/: test_backend.py
frontend/: .env  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.vue  main.js  red.css  router.js  style.css
frontend/src/components/: bot.vue  bottom_slider.vue  dialog.vue  footer.vue  form_is_send.vue  hard_bot.vue  next_session.vue  particles.vue  user_bar.vue  video.vue
frontend/src/components/admin_panel/: selection_form.vue
frontend/src/components/first_page/: card1.vue  card2.vue  element.vue  preview.vue
frontend/src/components/soglasie/: preview.vue
frontend/src/routes/: first_form.vue  first_form_new.vue  login.vue  main.vue  new_main.vue  new_new_main.vue  profile.vue  second_form.vue  second_form_new.vue  selection.vue  selection_form.vue  task1.vue  task3.vue  task4.vue  task5.vue  terms.vue
frontend/src/routes/admin_panel/: old_panel.vue  panel.vue  user.vue
frontend/src/routes/tasks/: task1.vue  task2.vue  task3.vue  task4.vue  task5.vue  task6.vue  task7.vue  task8.vue
frontend/src/services/: auth.service.js  user.service.js
frontend/src/store/: index.js
