[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Stanislav <sta-tun-slav@yandex.ru>"]
packages = [
    { include = "./src" },
]

[tool.poetry.scripts]
run_server = "src.main:runner"
set_db = "src.db.set_db:runner"
email = "src.email:runner"

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"
Flask-Cors = "^3.0.10"
importlib-metadata = "^4.12.0"
SQLAlchemy = "^1.4.39"
PyMySQL = "^1.0.2"
typer = "^0.4.1"
secure-smtplib = "^0.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
